Align title center and correct box size.

--- a/module2/css/styles.css
+++ b/module2/css/styles.css
@@ -40,6 +40,7 @@ body {
 }
 
 h1 {
+  text-align: center;
   font-size: 1.75em;
 }
 
@@ -52,12 +53,15 @@ section {
   margin-bottom: 10px;
   margin-top: 10px;
 
-
   position:relative;
   padding-top: 40px;
   padding-left: 10px;
   padding-right: 10px;
   padding-bottom: 10px;
+
+  height: 280px;
+  overflow: auto;
+  overflow-x: hidden;
 }
 
 section > h4 {
